# quantizing-lsa

./: .gitignore  README.md  import_fla_startup.py  main.py  pyproject.toml  quantized_linear_attention_synthetic_env1.ipynb
evals/: eval_dummy_test.py
models/GLA/: GLATransformer.py  __init__.py
quant/: __init__.py  fx_compat.py  mapping_gla.py  mapping_gpt2.py  observers.py  pipeline.py
scripts/: export_gla.py  export_gpt.py  fix_int8_checkpoint.py  ptq_calibrate_gpt.py
scripts/submission_scripts/export_gla/: export_gla.sh  export_gla.sub
scripts/submission_scripts/export_gpt/: export_gpt.sub
scripts/submission_scripts/lm_eval_baseline/: lm_eval_baseline.sh  lm_eval_baseline_gla.sub  lm_eval_baseline_gla_int8.sub  lm_eval_wrapper.py  lm_eval_wrapper_int8.py
scripts/submission_scripts/quant_observers/: quant_obs_gla.sh  quant_obs_gla.sub
