[project]
name = "quantizing-lsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flash-linear-attention",
    "lm-eval[hf]>=0.4.9.1",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "torch>=2.9.0",
]

[tool.uv.sources]
flash-linear-attention = { git = "https://github.com/fla-org/flash-linear-attention.git" }
